--- a/index.html
+++ b/index.html
@@ -11,179 +11,11 @@
 	<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
 	<script src="./leaflet-event-forwarder.js"></script>
 
+	<link rel="stylesheet" href="style.css">
+
 	<script src="countries.json"></script>
 	<script src="states.json"></script>
 	<script src="cities.json"></script>
-
-	<style>
-			body {
-					padding: 0;
-					margin: 0;
-			}
-			html, body, #map {
-					height: 100%;
-					width: 100%;
-					background: #9999FF;
-			}
-
-			.info {
-				color: #ffffff;
-			}
-
-			#menu-button {
-				position: absolute;
-				top: 55px;
-				left: 12px;
-				z-index: 1000;
-				font-size: 23px;
-				background: #fff;
-				padding: 0px 5px 2px 5px;
-				border-radius: 2px;
-				box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-			}
-
-			#menu {
-				position:absolute;
-				top:130px;
-				left: 10px;
-				z-index: 1000;
-				background: #fff;
-				padding: 20px 20px 20px 20px;
-				border-radius: 5px;
-				box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-				display: none;
-			}
-
-			#quiz-setup {
-				display: none;
-			}
-
-			#quiz-panel {
-				position: absolute;
-				bottom: 10px;
-				max-width: 400px;
-				left: 0;
-				right: 0;
-				margin: 0 auto;
-				z-index: 1000;
-				background: #fff;
-				display: none;
-				padding: 20px 20px 20px 20px;
-				border-radius: 5px;
-				box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-			}
-
-			#details {
-				position:absolute;
-				width: 250px;
-				top:100px;
-				right: 10px;
-				z-index: 1000;
-				background: #fff;
-				padding: 20px;
-				border-radius: 5px;
-				box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-			}
-
-			.details-heading {
-				line-height: 0.1;
-			}
-
-			#quiz-setup-question-types {
-				border:2px solid #ccc; width:300px; height: 100px; overflow-y: scroll;
-			}
-
-			#quiz-setup-question-types label {
-				display: block;
-			}
-
-			#controls {
-				display: block;
-			}
-
-			#controls-countries {
-				border:2px solid #ccc; width:300px; height: 100px; overflow-y: scroll;
-			}
-
-			#controls-countries label {
-				display: block;
-			}
-
-			#controls-info-types {
-				border:2px solid #ccc; width:300px; height: 100px; overflow-y: scroll;
-			}
-
-			#controls-info-types label {
-				display: block;
-			}
-
-			/* Toggle Button */
-
-			/* The switch - the box around the slider */
-			.switch {
-				position: relative;
-				display: inline-block;
-				width: 60px;
-				height: 34px;
-				z-index: 1000;
-			}
-
-			/* Hide default HTML checkbox */
-			.switch input {
-				opacity: 0;
-				width: 0;
-				height: 0;
-			}
-
-			/* The slider */
-			.slider {
-				position: absolute;
-				cursor: pointer;
-				top: 0;
-				left: 0;
-				right: 0;
-				bottom: 0;
-				background-color: #ccc;
-				-webkit-transition: .4s;
-				transition: .4s;
-			}
-
-			.slider:before {
-				position: absolute;
-				content: "";
-				height: 26px;
-				width: 26px;
-				left: 4px;
-				bottom: 4px;
-				background-color: white;
-				-webkit-transition: .4s;
-				transition: .4s;
-			}
-
-			input:checked + .slider {
-				background-color: #2196F3;
-			}
-
-			input:focus + .slider {
-				box-shadow: 0 0 1px #2196F3;
-			}
-
-			input:checked + .slider:before {
-				-webkit-transform: translateX(26px);
-				-ms-transform: translateX(26px);
-				transform: translateX(26px);
-			}
-
-			/* Rounded sliders */
-			.slider.round {
-				border-radius: 34px;
-			}
-
-			.slider.round:before {
-				border-radius: 50%;
-			}
-
-	</style>
 
 </head>
 <body>
@@ -192,9 +24,13 @@
 
 <div id="map" style="width: 100%; height: 100%;"></div>
 
-<p id="menu-button" onclick="toggleMenu()">☰</p>
+<div id="top-bar">
+	<p id="menu-button-open" onclick="toggleMenu()">☰</p>
+</div>
 
 <div id="menu">
+
+	<div id="menu-button-close" onclick="toggleMenu()">✕</div>
 
 	<label class="switch">
 		<input id="checkbox-controls-quiz" type="checkbox" onclick="toggleControlsQuiz()">
@@ -230,12 +66,12 @@
 </div>
 
 <div id="quiz-panel">
+	<div id="quiz-panel-button-close" onclick="finishQuiz()">✕</div>
 	<h4 id="quiz-panel-question"></h4>
 	<form onsubmit="checkAnswer(event)">
 		<input id="quiz-panel-input" type="text" autocomplete="off">
 		<button id="quiz-panel-submit-button" type="submit">Submit</button>
 	</form>
-	<button onclick="finishQuiz()">Quit</button>
 </div>
 
 <div id="details">
@@ -249,7 +85,13 @@
 
 <script type="text/javascript">
 
-	var map = L.map('map').setView([37.8, -96], 4);
+	var map = L.map('map', {
+		zoomControl: false
+	}).setView([37.8, -96], 4);
+
+	L.control.zoom({
+     position: 'topright'
+	 }).addTo(map);
 
 	L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
 		maxZoom: 16
@@ -651,8 +493,9 @@
 
 		setUpQuizVisuals();
 
-		document.getElementById('menu-button').style.display = "none";
+		document.getElementById('menu-button-open').style.display = "none";
 		document.getElementById('menu').style.display = "none";
+		document.getElementById('details').style.display = "none";
 		document.getElementById('quiz-panel').style.display = "block";
 
 		var checkedQuestionTypeCheckBoxes = document.querySelectorAll('input[name=quiz-setup-question-type]:checked');
@@ -823,7 +666,8 @@
 		tearDownQuizVisuals();
 
 		document.getElementById('quiz-panel').style.display = "none";
-		document.getElementById('menu-button').style.display = "block";
+		document.getElementById('menu-button-open').style.display = "block";
+		document.getElementById('details').style.display = "block";
 		document.getElementById('menu').style.display = "block";
 		quizMode = false;
 	}
